--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.application.name=gestionPretBanquaire
+0spring.application.name=gestionPretBanquaire
+server.port=9000
+
+#Connexion database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/loan_management
+spring.datasource.username=springuser
+spring.datasource.password=spring
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+
+#logs
+logging.level.root=ERROR
+logging.level.sn.techKitchen=INFO
+
+
+
+
+
+
+
+
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
