--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=9000
 #Connexion database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/loan_management
-spring.datasource.username=springuser
-spring.datasource.password=spring
+spring.datasource.url=jdbc:mysql://localhost:3306/loan_managment
+spring.datasource.username=root
+spring.datasource.password=mouha2000n
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
 
