--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-0spring.application.name=gestionPretBanquaire
+spring.application.name=gestionPretBanquaire
 server.port=9000
 
 #Connexion database
