--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9000
 #Connexion database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/loan_managment
+spring.datasource.url=jdbc:mysql://localhost:3306/loan_management
 spring.datasource.username=springuser
 spring.datasource.password=spring
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
