--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=9000
 
 #Connexion database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url=jdbc:mysql://localhost:3306/loan_management
 spring.datasource.username=springuser
 spring.datasource.password=spring
