--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@ server.port=9000
 
 #Connexion database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:mysql://localhost:3306/loan_management
 spring.datasource.username=springuser
 spring.datasource.password=spring
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
+
 
 #logs
 logging.level.root=ERROR
